service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-hostname-service
  labels:
    client: internal
    version: 1.0.0
    environtment: dev
  annotations:
    description: Practice Kubernetes Service
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 5000
      nodePort: 31515
  selector:
    app: go-hostname
